--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Portfolio</title>
+    // add favicons here
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Kristian Ceder</title>
   </head>
   <body className="debug-screens">
     <noscript>You need to enable JavaScript to run this app.</noscript>
